--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,20 @@
             "mode": "debug",
             "port":34338,//随便写
             "host":"127.0.0.1",//  net/Http绑定监听的ip地址，如有必要的话，才需要配置这项
-            "program": "/Users/guominglong/Desktop/GMLP/src/appDelegate.go",
+            "program": "C:\\Users\\guominglong\\Documents\\GitHub\\GMLP\\src\\appDelegate.go",
+            "env": {},
+            "args": [],
+            "showLog":false/*,
+            "trace": "log"*/
+        },
+        {
+            "name": "gmlpSocketservice",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "port":39391,//随便写
+            "host":"127.0.0.1",//  net/Http绑定监听的ip地址，如有必要的话，才需要配置这项
+            "program": "C:\\Users\\guominglong\\Documents\\GitHub\\GMLP\\GMLSocketService\\appDelegate.go",
             "env": {},
             "args": [],
             "showLog":false/*,
